@@ -292,3 +292,4 @@
     - Added RES_str_get and RES_str_set functions to EGA.
 - v.5.7.7 (2023-XX-YY)
     - Commonized IDD_ADDDLGINIT and IDD_MODIFYDLGINIT.
+    - Changed the design of RES_str_get and RES_str_set.
